--- a/src/index.html
+++ b/src/index.html
@@ -9,6 +9,16 @@
   <link rel="icon" type="image/x-icon" href="favicon.ico">
 </head>
 <body>
-  <app-root></app-root>
+<div class="container body-content applicationHost">
+  <app-root>
+    <nav class="navbar navbar-toggeable-md fixed-top navbar-inverse bg-primary">
+      <div class="container">
+        <a class="navbar-brand" href="">Workout Tracker</a>
+      </div>
+    </nav>
+    <h2>Loading Workout Tracker</h2>
+  </app-root>
+</div>
+
 </body>
 </html>
